numberDecimalsAlmostEqual doesn't work for negative numbers

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc8, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • QO 2022-05-30
    • 155
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      NumberDecimal("-104735446372966662851.0135276410897") and NumberDecimal("-104735446372966750508.0426966190306") should be "almost equal", but they are not.

            Assignee:
            Davis Haupt (Inactive)
            Reporter:
            Hana Pearlman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: