SERVER-66784 numberDecimalsAlmostEqual shell helper now works for negative numbers